#8126 closed bug (fixed)
[Deskbar] does not update folder names and application window titles in expanded mode
Reported by: | beos_zealot | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Deskbar | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Folder names in list of opened folders stays unchanged when i browse up and down through opened folder hierarchy in Tracker. Folder names can only be updated manually - if I click on expander to hide all opened folders in Tracker and after click again - to show them.
My settings in "Deskbar preferences":
[ ] Sort running applications
[X] Tracker always first
[X] Show application expander
[X] Expand new applications
Change History (5)
comment:1 by , 13 years ago
Summary: | [Deskbar] does not update folder names in expanded mode → [Deskbar] does not update folder names and application window titles in expanded mode |
---|
comment:2 by , 13 years ago
Looked at http://cgit.haiku-os.org/haiku/log/src/apps/deskbar and I guess that most recent hrev43195 or hrev43092 changes may caused this.
comment:3 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
follow-up: 5 comment:4 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev43819.
hrev43195 was the problem, although the code isn't perfect and will trigger unnecessary updates as it was/is again.
Basically it compares the full window name with the truncated label to decide wether to update the label. This will not match most of the time so the label will get updated, even if the truncated string doesn't actually change.
Double checked and noticed that same happens with application window titles, best noticeable and visible on apps with multiple windows or tabs, for example BeZilla Browser, Terminal...