Window title in Expanded Deskbar update properly  * Regression introduced by r43195  * Fixes #8126